k8s/blue/service.yml
apiVersion: v1
kind: Service

metadata:
  name: springboot-blue-service

spec:
  type: ClusterIP

  selector:
    app: springboot-app
    color: blue

  ports:
    - port: 8080
      targetPort: 8080
